--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,3 +1,12 @@
-<body>
-<app-root></app-root>
-</body>
+<!doctype html>
+<html lang="es" class="dark">
+  <head>
+    <meta charset="utf-8" />
+    <title>Kushki IA Project</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+  </head>
+  <body class="min-h-screen bg-slate-900 text-slate-100">
+    <app-root></app-root>
+  </body>
+  </html>
